--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title and Description for SEO -->
-  <title>Raindrop Kesar And Dry Fruits | Premium Dry Fruits Online</title>
+  <title>Raindrop Kesar And Dry Fruits  |  Kashmiri Saffron(Kesar)| Kashmiri Dryfruits |  Premium Dry Fruits Online</title>
   <meta name="description" content="Buy premium almonds, figs, raisins, walnuts, kesar, and more at Raindrop Kesar And Dry Fruits. Quality dry fruits at the best prices in Srinagar.">
   <meta name="keywords" content="Dry fruits, Almonds, Walnuts, Figs, Raisins, Kesar, Kashmir dry fruits, Premium dry fruits online">
   <meta name="author" content="Raindrop Kesar And Dry Fruits">
