--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
   </a>
 
    <a href="product.html?product=badamoil" class="product-card">
-    <img class="pro-img" src="./products/Badaamoil.png" alt=badamoil">
+    <img class="pro-img" src="./products/badaamoil.png" alt=badamoil">
     <p class="product-name">Badam Oil</p>
     <p class="product-prize">₹375</p>
     <p>Per bottle</p>
