--- a/product.html
+++ b/product.html
@@ -813,7 +813,7 @@ image: "./products/panjeeri.png",
   },
    "badamoil": {
     title: "Badam Oil",
-    image: "./products/Badaamoil.png",
+    image: "./products/badaamoil.png",
   //  sku: "DFH026",
     description: "Badam (Almond) Oil, rich in vitamin E and antioxidants, deeply nourishes skin and hair, promotes glow, strength, and overall wellness.",
     prices: {
