--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <meta name="robots" content="index, follow">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://raindropkesardryfruits.netlify.app/">
+  <link rel="canonical" href="https://raindropkesaranddryfruits.netlify.app/" />
+
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="logon.png">
