--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <meta name="robots" content="index, follow">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://raindropkesaranddryfruits.netlify.app/" />
+  <link rel="canonical" href="https://raindropkesaranddryfruits.netlify.app/"/>
 
-
+<!--hi im uzair-->
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="logon.png">
   <link rel="apple-touch-icon" href="logon.png">
